app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: default
spec:
  parentRefs:
    - name: demo
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: nginx-service
          port: 80
